# babysniff

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
src/: alloc.h  arguments.c  arguments.h  babysniff.c  babysniff.h  base64.c  base64.h  bpf_filter.c  bpf_filter.h  channel.c  channel.h  channel_ops.c  channel_ops.h  channel_ops_common.h  common.c  common.h  config.c  config.h  daemon.c  daemon.h  dump.c  dump.h  endianess.h  listener.h  log.c  log.h  log_level.c  log_level.h  macros.h  proto_ops.h  security.c  security.h  signal_handler.c  signal_handler.h  stdio_utils.c  stdio_utils.h  system.h  types.h  utils.c  utils.h  (+2 more)
src/bpf/: bpf_filter.c  bpf_filter.h  bpf_types.h  bpf_vm.c  bpf_vm.h
src/bsd/: channel_ops_bpf.c
src/compat/: getopt_compat.c  getopt_compat.h  network_compat.h  string.c  string.h  string_compat.c  string_compat.h  time_compat.c  time_compat.h
src/linux/: channel_ops_linux.c
src/platform/bsd/: bpf_ops_bsd.c  channel_ops_bpf.c
src/platform/linux/: bpf_ops_linux.c  channel_ops_linux.c
src/platform/shared/: channel_ops_common.c
src/proto/: proto_ops.c  proto_ops_arp.c  proto_ops_dns.c  proto_ops_eth.c  proto_ops_icmp.c  proto_ops_ip.c  proto_ops_tcp.c  proto_ops_udp.c
src/proto/dns/: arrays.c  arrays.h  dns.h  header.c  header.h  name.c  name.h  reader.c  reader.h  sections.h  types.h
src/proto/dns/sections/: question.c  question.h  rdata.c  rdata.h  rr.c  rr.h
src/proto/dns/sections/rdata/: a.c  a.h  aaaa.c  aaaa.h  cname.c  cname.h  dnskey.c  dnskey.h  mx.c  mx.h  ns.c  ns.h  ptr.c  ptr.h  rrsig.c  rrsig.h  soa.c  soa.h  txt.c  txt.h
src/types/: buffer.c  buffer.h  pair.c  pair.h  queue.h
